fix: resolve R2DBC configuration circular dependency
Fix circular dependency in R2dbcConfiguration that was preventing
application context from loading.

**Changes:**
- Remove extension of AbstractR2dbcConfiguration to avoid circular reference
- Simplify R2dbcConfiguration to only register custom converters
- Use R2dbcCustomConversions.of() with PostgresDialect.INSTANCE
- Application context now loads successfully in tests

**Current Status:**
- Application starts without circular dependency errors
- Integration tests run but fail with 500 errors (runtime data access issue)
- Next step: Debug reactive data flow and JSONB converter registration

**Test Results:**
- 1 test passing (400 Bad Request - routing works)
- 6 tests failing with 500 errors (data access layer needs debugging)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>